# SCVCG

./: .CMakeLists.txt  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
example/: client1.c  client2.c  server.c
include/: SCVCG.h
src/: SCVCG.c  client.c  main.cpp  record.c  reproduction.c  server.c  webWork.c
src/headers/: client.h  record.h  reproduction.h  server.h  webWork.h
